--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                             'Authorization': `Bearer ${MISTRAL_API_KEY}`
                         },
                         body: JSON.stringify({
-                            model: 'gpt-5-mini',
+                            model: 'gemini',
                             messages: aiConversationHistory,
                             stream: true
                         })
